test/sema/unary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:5: error: 'void' cannot be used as an operand to unary operator
    !foo();

    // CHECK: [[# @LINE + 1 ]]:5: error: 'void' cannot be used as an operand to unary operator
    -foo();
}
